<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wild Wool</string>

    <!--  BluetoothChat -->
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="roll_die">Roll the die!</string>
    <string name="roll">Roll</string>
    <string name="grow">Grow Wool</string>
    <string name="winner_unknown">Unknown winner.</string>
    <string name="shear">Shear Sheep</string>
    <string name="wolf">Send Wolf</string>
    <string name="swap">Swap Sheep</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    
    <string name="message">Roll the die!</string>
    <string name="player">Player</string>
    <string name="wool_sheared">Wool/Sheared Wool</string>
    <string name="player_one">P1 (You)</string>
    <string name="player_two">P2</string>
    <string name="player_three">P3</string>
    <string name="player_four">P4</string>

</resources>