<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
	<Button android:id="@+id/roll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/roll" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:visibility="visible"
        android:text="@string/roll_die"
        android:textStyle="bold"
        android:gravity="center"
         />
        <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#2C33EC"
        />
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dip"
    >

    <TableRow android:gravity="left" android:layout_gravity="left">
         <TextView
            android:text="@string/player"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_gravity="left"
            />
        <!-- 
        <TextView
            android:text="@string/wool"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            />
             -->
        <TextView
            android:text="@string/wool_sheared"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_gravity="right"
            />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#2C33EC"
        />

    <TableRow>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p1_wool"
        android:textStyle="bold"
        android:visibility="visible"
         />
    </TableRow>

    <TableRow>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p2_wool"
        android:visibility="visible"
         />
    </TableRow>

    <TableRow>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p3_wool"
        android:visibility="visible"
         />
    </TableRow>
    
    <TableRow>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p4_wool"
        android:visibility="visible"
         />
    </TableRow>
</TableLayout>
        <View
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        />
    	<Button android:id="@+id/grow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:text="@string/grow" />
    <Button android:id="@+id/shear"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:text="@string/shear" />
    <Button android:id="@+id/wolf"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:text="@string/wolf" />
        <Button android:id="@+id/swap"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:text="@string/swap" />
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p2"
        android:textColor="#60EF50"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/p2"
        android:visibility="invisible"
         />
                <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p3"
        android:textStyle="bold"
        android:text="@string/p3"
        android:textColor="#60EF50"
        android:textSize="20sp"
        android:visibility="invisible"
         />
                        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p4"
        android:textStyle="bold"
        android:text="@string/p4"
        android:textColor="#60EF50"
        android:textSize="20sp"
        android:visibility="invisible"
         />
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/winner"
        android:visibility="gone"
        android:text="@string/winner_unknown"
        android:textColor="#01FF27"
        android:textSize="17dp"
        android:textStyle="bold"
        android:gravity="center"
         />
</LinearLayout>